[package]
name = 'libcec-sys'
version = "2.0.0-alpha.0"
authors = ['Sami Salonen']
edition = '2018'
license = 'GPL-2.0'
description = 'FFI bindings to libcec'
documentation = 'https://docs.rs/libcec-sys'
readme = 'README.md'
include = [
    '/README.md',
    '/LICENSE',
    '/Cargo.toml',
    '/src/*.rs',
    '/vendor',
    '/build.rs',
]
keywords = ['libcec', 'cec', 'hdmi']
categories = ['external-ffi-bindings']
homepage = 'https://github.com/ssalonen/libcec-sys'
repository = 'https://github.com/ssalonen/libcec-sys'
build = 'build.rs'
links = 'cec'

[dependencies]

[build-dependencies]
cmake = '0.1.45'
copy_dir = '0.1.2'
pkg-config = '0.3.24'
cc = '1.0.72'

[features]
default = []
vendored = []

[badges.maintenance]
status = 'passively-maintained'
