[package]
name = 'libcec-sys'
version = "4.0.2"
authors = ['Sami Salonen']
edition = '2021'
license = 'GPL-2.0'
description = 'FFI bindings to libcec'
documentation = 'https://docs.rs/libcec-sys'
readme = 'README.md'
include = [
    '/README.md',
    '/LICENSE',
    '/Cargo.toml',
    '/src/*.rs',
    '/vendor',
    '/build/smoke_abi*.c',
    '/build/build.rs',
]
keywords = ['libcec', 'cec', 'hdmi']
categories = ['external-ffi-bindings']
homepage = 'https://github.com/ssalonen/libcec-sys'
repository = 'https://github.com/ssalonen/libcec-sys'
build = 'build/build.rs'
links = 'cec'

[dependencies]

[build-dependencies]
cmake = "0.1.48"
fs_extra = "1.3.0"
pkg-config = "0.3.25"
cc = "1.0.73"

[features]
default = []
vendored = []

[badges.maintenance]
status = 'passively-maintained'
