[workspace]
resolver = "2"
members = [".", "cec_bindgen"]

[package]
name = 'libcec-sys'
version = "9.0.1-alpha.0"
authors = ['Sami Salonen']
edition = '2021'
license = 'GPL-2.0'
description = 'FFI bindings to libcec'
documentation = 'https://docs.rs/libcec-sys'
readme = 'README.md'
include = [
    '/README.md',
    '/LICENSE',
    '/Cargo.toml',
    '/src/*.rs',
    '/vendor',
    '/build/smoke_abi*.c',
    '/build/build.rs',
]
keywords = ['libcec', 'cec', 'hdmi']
categories = ['external-ffi-bindings']
homepage = 'https://github.com/ssalonen/libcec-sys'
repository = 'https://github.com/ssalonen/libcec-sys'
build = 'build/build.rs'
links = 'cec'

[dependencies]
cfg-if = "1"

[build-dependencies]
cmake = "0.1.48"
fs_extra = "1.3.0"
pkg-config = "0.3.25"
cc = "1.0.73"
target-lexicon = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
zip-extract = "0.1"

[features]
default = []
vendored = []
static = []

[badges.maintenance]
status = 'passively-maintained'

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(abi4)', 'cfg(abi5)', 'cfg(abi6)', 'cfg(abi7)'] }
