[package]
name = "cec_bindgen"
version = "0.1.0"
edition = "2021"

[dependencies]
bcmp = "0.4"
bindgen = "0.69"
cec_bootstrap = { path = "../cec_bootstrap" }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
target-lexicon = "0.12"
tempfile = "3"
zip-extract = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1.11.1"